# sign2speech

./: .gitignore  README.md  _config.yml  config.yaml  create_test_videos.py  infer.py  live.py  plot_exp.py  pyproject.toml  requirements.txt  test.py  trainer.sh  transformer.sh  tui.py  ui.py  utils.py  x3d_freeze.csv
experiments/: features_val.csv  freeze.csv  freeze_i3d_1.json  freeze_i3d_2.json  freeze_i3d_3.json  freeze_i3d_4.json  freeze_i3d_5.json  freeze_x3d_1.json  freeze_x3d_2.json  freeze_x3d_3.json  freeze_x3d_4.json  freeze_x3d_5.json  histogram.py  incremental_training.csv  incrimental_train.py  motion_visualization.py  plot.py  pose.py  pose_classify.py  temp_train.csv  temp_val.csv  vid_length.csv  visualize.py  wrapper.py  x3d_freeze.csv
experiments/audio/: audio_correct.csv  audio_corrector.py
experiments/audio_test/: metrics.csv  test_results.txt
experiments/audio_test/audio_samples/: sample_0_metrics.txt  sample_1_metrics.txt  sample_2_metrics.txt  sample_3_metrics.txt  sample_4_metrics.txt  (+5 more)
experiments/combined/: dataset.py  model.py  train.py
experiments/continuous/: create_videos.py
experiments/crop/: ui.py
experiments/i3d_vs_x3d/: freeze.csv  histogram.py  i3d_freeze.csv  wrapper.py
experiments/incremental_training/: incremental_train.csv  incremental_train.py  incremental_training.csv  plot.py  standalone_train.csv  standalone_train.py  temp_test.csv  temp_train.csv  temp_val.csv  test.py
experiments/pose/: pose.py  pose_classify.py  pose_features.csv
experiments/visualizations/: temp_train_vis.csv  temp_val_vis.csv  visualize.py
experiments/wlasl/: cnf.npy  test.py  test_results_per_class.csv  test_results_summary.csv  train.py
fastspeech2_model/: hyperparams.yaml  model.ckpt  spn_predictor.ckpt
hifigan_model/: generator.ckpt  hyperparams.yaml
models/: __init__.py  dataset.py  model.py  nms.py  train.py
models/extractor/: __init__.py  cnf.npy  config.json  dataset.py  model.py  test.py  test_results_per_class.csv  test_results_summary.csv  train.py
models/generator/: __init__.py
models/transformer/: __init__.py  config.json  dataset.py  model.py  test.py  train.py  train_cosine.py
utils/: common.py  config.py  configs.py  create_test_videos.py  model.py  models.py  plot_exp.py  training.py
(+7 files in other folders)
